--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/WebXRHost.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/WebXRHost.data",
+        frameworkUrl: buildUrl + "/WebXRHost.framework.js",
+        codeUrl: buildUrl + "/WebXRHost.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "REF",
         productName: "WebXRDemo",
